# vscode-gruvbox

./: .gitignore  CHANGELOG.md  README.md  flake.nix  package-lock.json  package.json  vsc-extension-quickstart.md  vscode-gruvbox-generate.cabal
src/: Imports.hs  Main.hs  Palette.hs  Semantic.hs  Syntax.hs  Theme.hs  Types.hs  Workbench.hs
themes/: gruvbox-medium-dark.json
